--- a/79-諸芸．娯楽/795-囲碁/795.0-囲碁/795.0-囲碁.md
+++ b/79-諸芸．娯楽/795-囲碁/795.0-囲碁/795.0-囲碁.md
@@ -6,3 +6,140 @@
 
 ## 分野の歴史
 
+<!-- 
+アウトライン
+- 1. 起源と古代中国：盤上遊戯としての成立（伝説〜唐代）
+  - 1.1 「囲碁／弈」の原型と伝承（堯・舜伝説、弈秋の逸話など）
+  - 1.2 盤・石・線の標準化と、遊戯から教養へ（儒教的教養・軍略との接続）
+- 2. 古典文化の中の囲碁：文人趣味と思想（唐〜宋〜明清）
+  - 2.1 「琴棋書画」の一角としての地位と、勝負観・美意識（手筋・形・厚みの萌芽）
+  - 2.2 代表的な棋書・格言の形成（『玄玄碁経』『碁経十三篇』『囲碁十訣』など）
+- 3. ルールと技法の成熟：競技の骨格が固まるまで
+  - 3.1 地取りの概念、死活・手筋・定石の体系化と口伝
+  - 3.2 段級位・置碁・コミ（先後調整）の発想と、地域差の整理
+- 4. 朝鮮半島・日本への伝播：受容とローカル化（古代〜中世）
+  - 4.1 交流史の中の囲碁（遣隋使・遣唐使、僧侶・文人の移動）
+  - 4.2 日本での「碁」の位置づけ（宮廷文化・武家文化の余技から嗜みへ）
+- 5. 江戸期のプロ化：家元制度と「御城碁」が作った競技文化（17〜19世紀）
+  - 5.1 本因坊算砂の登場と四家（本因坊・井上・安井・林）の制度化
+  - 5.2 御城碁・段位制度・免状による権威、棋譜の蓄積と研究
+  - 5.3 本因坊道策に象徴される理論化（定石・布石観の洗練、強豪の物語化）
+- 6. 近代化と制度の再編：明治以降の囲碁が直面した断絶（19世紀末〜戦前）
+  - 6.1 旧制度の崩壊と新結社（方円社など）による近代プロ組織の模索
+  - 6.2 新聞・雑誌と観戦文化：対局の公開、観戦記・棋譜掲載が生む大衆化
+  - 6.3 昭和初期の統合と日本棋院の成立、タイトル戦の萌芽
+- 7. 戦後日本囲碁の黄金期：スターとタイトル戦が作る「競技の物語」（1945年以降）
+  - 7.1 呉清源（Go Seigen）と木谷実の革新、近代布石のインパクト
+  - 7.2 本因坊戦・名人戦・棋聖戦など主要棋戦の整備とスポンサーシステム
+  - 7.3 普及の制度：囲碁教室、アマ大会、テレビ囲碁（NHK杯）と解説文化
+- 8. 東アジアから世界へ：国際化と勢力図の変動（20世紀後半〜）
+  - 8.1 韓国の台頭（趙治勲の越境、曹薫鉉・李昌鎬ら）と世界戦の成立
+  - 8.2 中国の再興（聶衛平のブーム、国家的育成、国際戦での存在感）
+  - 8.3 日中韓の制度比較（プロ試験・リーグ・賞金）と、世界大会の位置づけ
+- 9. コンピュータ囲碁とAI革命：研究テーマから日常ツールへ（20世紀末〜現代）
+  - 9.1 初期のコンピュータ囲碁と評価関数、モンテカルロ木探索のブレークスルー
+  - 9.2 2016年のAlphaGo対李世ドル戦が与えた衝撃と、戦法の再編
+  - 9.3 解析AIの普及（KataGo、Leela Zero等）と、学習・研究・観戦の変化
+- 10. 現代の囲碁：文化資産・マインドスポーツ・コミュニティの交差点
+  - 10.1 競技と芸道の二面性（勝負の合理性／形や読みの美学）
+  - 10.2 オンライン対局・配信・国際交流、女性棋戦やジュニア育成の動向
+  - 10.3 今後の論点：AI時代の創造性、普及と市場、ルール整備（コミ・持ち時間）と国際統一
+-->
+
+### 1. 起源と古代中国：盤上遊戯としての成立（伝説〜唐代）
+
+囲碁の歴史は、はじめから「勝てば終わり」の勝負事として語られてきたわけではない。中国古代の伝承では、為政者が子の教育のために作らせた、あるいは宇宙の理を盤上に写した、といった物語が添えられる。史実として確かめられる範囲でも、囲碁は早い段階から、単なる暇つぶし以上の意味を持つ遊びとして扱われた。『孟子』に見える弈秋（いしゅう）の逸話が象徴するように、同じ一局でも、心の置きどころ（集中と散漫）が結果を分けるという見立てが、すでに古典の言葉に織り込まれている。
+
+この遊戯が特別なのは、道具が簡素で、規則が短いにもかかわらず、局面の可能性がほとんど尽きない点にある。盤と石は、最小限の記号でありながら、戦いの形、領域の境界、眼形の有無といった「意味」を生む。古代から中世へと進むにつれて、盤の目（路）の数や石の形状、線の引き方が整えられ、盤上で起きる出来事が共通の言語で語れるようになっていった。遊戯が「文化」になるためには、遊び方だけでなく、記録と再現ができる形式が必要であり、囲碁はその形式化を早くから進めた分野でもある。
+
+また、囲碁は「対面の沈黙」を前提とする点でも独特だった。碁石の音、相手の呼吸、盤面に現れる意図——言葉を交わさずに思考が衝突するこの性格は、後に「手談」という言葉で表現されるようになる。勝敗の背後にあるのは、相手の心を読むことよりも、盤面の必然を読み取ることだという感覚である。だからこそ、囲碁は古代以来、教養や修養、あるいは知恵比べの象徴として語られてきた。
+
+### 2. 古典文化の中の囲碁：文人趣味と思想（唐〜宋〜明清）
+
+囲碁が文人の教養として位置づけられると、盤上の勝敗は、しだいに人格や思考の比喩として語られるようになる。「琴棋書画」という言い方が示すように、囲碁は音楽や書画と並び、技術と精神性の両方が問われるものとされた。石を置く行為は即興でありながら、同時に全体の調和を壊さない判断でもある。局所の利益を追って形を崩すのか、厚みを築いて後半に生かすのか——そうした選択は、しばしば「処世」や「軍略」に重ねて語られた。
+
+この時代には、棋譜を読む習慣と、言葉で要点を伝える棋書の伝統が育つ。代表的な棋書として『玄玄碁経』や『碁経十三篇』が知られ、格言集としては『囲碁十訣』が広く引用されてきた。これらは単に「こう打て」と命令するのではなく、盤面のどこを重くし、どこを軽く扱うかという判断の筋道を、短い句や例局で示す。囲碁が長く続いたのは、勝ち方の技術が世代を越えて蓄積される一方で、その技術が毎局の具体的な状況に応じて再解釈される余地を残したからでもある。
+
+古典の棋書が面白いのは、理論が抽象へ逃げすぎず、具体へ沈みすぎないところにある。局所の手筋や死活の「解き方」を示しながら、最後には全局の姿勢——厚みを尊ぶのか、確定地を積むのか、戦うべき局面と譲るべき局面をどう見分けるか——へ読者を引き上げる。囲碁は、勝負の技術であると同時に、判断を積み重ねる思考訓練でもあるという理解が、古典文化の中で育った。
+
+### 3. ルールと技法の成熟：競技の骨格が固まるまで
+
+囲碁のルールは驚くほど簡潔だが、簡潔さは未熟さではない。石を置き、連なりをつくり、呼吸点（気）が尽きれば取られる。終局には地を数える。たったこれだけの骨組みが、戦術と戦略、局所と全体、読みと感覚を一つの体系に収める。ルールが短いほど、判断を支える概念（死活、手筋、定石、厚み、先手、形など）が重要になり、その概念は口伝と棋譜研究の中で磨かれてきた。
+
+一方で、各地域・各時代の囲碁には、数え方や終局の合意、先後の調整などに差異もあった。置碁（ハンデ戦）は実力差を抱えたまま勝負を成立させる工夫であり、段級位の観念は、勝敗の結果を共同体の中で「格付け」に変換する装置だった。さらに、先番の有利を是正するためにコミ（持ち目）が導入され、半目を用いて引き分けを避ける方式が一般化するなど、競技としての公正さを高める方向に制度は更新されていく。囲碁史の一つの軸は、盤上の思想と美意識を守りながら、勝負としての透明性をどう確保するか、という調整の歴史でもある。
+
+たとえば劫（こう）という反復禁止の規則は、単なる揉め事の回避ではなく、局面の時間を前へ進めるための発明だ。無限循環を止めることで、局面は新しい地平へ押し出され、読みの深さが問われる。同様にセキ（持ち合い）のような概念は、勝ち切れない戦いを「引き分けの形」として盤上に固定し、争いの終わり方に言語を与えた。囲碁は、勝敗だけでなく、決着のつけ方そのものを洗練させてきたのである。
+
+もう一つ重要なのが、終盤（ヨセ）と数えの文化である。序盤での構想がどれほど美しくても、最後に一目を拾い、一目を守る精密さがなければ勝ちには届かない。ここで必要になるのは、局所の手筋だけでなく、地の増減を比較する「目算」、相手の狙いを先回りして損失を最小化する判断、そして終局の確認作業である。囲碁は、派手な戦いだけでなく、静かな計算と粘りが勝敗を左右する競技として成熟し、その成熟の過程で、日本式・中国式など複数のルール体系（地で数えるか、面積で数えるか）も整えられてきた。
+
+### 4. 朝鮮半島・日本への伝播：受容とローカル化（古代〜中世）
+
+囲碁は東アジアの交流史の中で、書物や絵画と同じように移動した。外交使節、留学僧、文人の往来は、技芸の伝播経路でもある。朝鮮半島では独自の棋風と伝統が育ち、日本でも「碁」は早くから宮廷文化や貴族の遊芸として受け入れられた。文学作品や日記の中に碁の場面が現れるのは、遊びが社会の「型」として定着していた証拠である。
+
+日本では、たとえば『源氏物語』に碁が登場し、盤を囲む人間関係の機微が描かれる。ここで碁は、強さを競うだけでなく、場の空気や距離感をつくる装置として働く。碁盤は小さな世界でありながら、視線と沈黙を集める中心でもある。こうした文化的な受容があったからこそ、後に囲碁が専門職として制度化されても、単なる賭博や遊芸に還元されず、「嗜み」としての正当性を保ち続けた。
+
+中世以降、碁は武家社会にも入り込み、余技でありながら勝負の緊張を伴う遊びとして親しまれる。囲碁の特徴は、相手の手を読んで先回りするだけでなく、あえて争わず、互いの利を認めて全体をまとめる判断も含む点にある。だからこそ、碁は単なる闘争のモデルではなく、交渉や統治の比喩にもなり得た。受容の過程で、用語や作法、師弟関係の形もローカル化し、やがて日本固有の制度へ結びついていく。
+
+### 5. 江戸期のプロ化：家元制度と「御城碁」が作った競技文化（17〜19世紀）
+
+日本の囲碁史で特筆すべき転換点は、江戸時代に「職業としての囲碁」が制度化されたことである。徳川幕府は碁打ちに公的な役割を与え、碁所（ごどころ）という職掌が置かれたとされる。1612年に本因坊算砂が碁所に任じられたという伝承は、囲碁が単なる私的娯楽ではなく、権威と結びついた技能として扱われたことを示している。以後、本因坊・井上・安井・林の四家が家元として並び立ち、弟子の養成、段位や免状、手合割（対局条件）の管理など、棋界のインフラを担った。
+
+1626年に始まったとされる御城碁は、将軍の前で行われる対局として名誉と緊張の象徴となった。ここでは一局の勝敗が、個人の面目だけでなく、家元の序列や門人の待遇にも影響する。棋譜は貴重な知的資源として蓄積され、研究と模倣の対象になった。囲碁が「強くなる方法」を組織的に獲得したのはこの時代であり、棋譜の体系的な継承が、後の近代化にも耐える土台を作った。
+
+家元制度が生んだもう一つの成果は、教育制度としての囲碁である。弟子は生活を共にし、実戦と詰碁、棋譜並べを通じて技能を体に落とし込む。手合割は、実力差を細かく刻んで勝負を成立させる仕組みであり、門下の序列と修行の段階を可視化した。こうした「段階的な成長の設計」があったからこそ、囲碁は一部の天才だけの芸ではなく、共同体として再生産できる技能になった。
+
+また、江戸期は「名人」を中心に棋風が語られ、英雄譚が生まれた時代でもある。本因坊道策は理論家としても実戦家としても卓越し、定石や布石観の洗練を通じて後世の基準点になった。こうした名人たちの存在は、囲碁を単なる技能から、物語性を持つ芸道へ押し上げた。強さが制度に守られ、同時に制度が強さに鍛えられる——家元制度は、その相互作用によって囲碁文化を厚くしたのである。
+
+江戸後期には、本因坊秀策が「強さの基準」を体現する存在として語り継がれる。1846年の対局で生まれた「耳赤の一手」は、局面の急所を見抜く直観と読みの象徴として、いまも繰り返し並べられる。秀策は1862年に流行病で早逝したが、秀策流と呼ばれる堅実な布石観は長く棋界の常識を形づくり、近代の革新が起きるまで「正しい打ち方」の代表格として機能した。名局が伝説になるのは、勝ったからではなく、後の世代がそこに学び続けたからである。
+
+### 6. 近代化と制度の再編：明治以降の囲碁が直面した断絶（19世紀末〜戦前）
+
+明治維新は、囲碁の世界にも断絶をもたらした。幕府の庇護を前提に成り立っていた家元制度は揺らぎ、棋士は新しい生計の道を探さざるを得なくなる。ここで重要だったのが、結社とメディアである。1879年に結成された方円社は、近代的な組織として棋士を束ね、実力による評価や対局の公開を進めた。囲碁は「限られた座敷の芸」から、より開かれた場へ移っていく。
+
+新聞・雑誌の発達は、囲碁を読む娯楽に変えた。棋譜掲載や観戦記は、対局がその場で消える出来事ではなく、再読され、議論され、共有されるコンテンツになることを意味する。読者が増えるほど、囲碁は「解説される」文化を必要とし、言語化の技術が磨かれていった。こうした流れの中で、1924年に日本棋院が設立され、棋士の所属と対局運営が統合される。近代囲碁は、制度・メディア・教育の三つ巴で形を変え、戦前期にはタイトル戦という新しい物語装置の準備が整っていく。
+
+戦前の近代化を象徴する出来事として、1933年から1934年にかけて行われた本因坊秀哉の引退碁が挙げられる。対局は長期にわたり、封じ手や持ち時間、休憩の取り方を含めて、「大勝負」をどう運営するかが社会的イベントとして提示された。ここには、家元制の終わりと、メディア主導の近代スポーツ化の始まりが重なっている。囲碁が伝統を背負いながらも、観戦される競技としての形式へ移るとき、必要だったのは新しい強さだけでなく、新しい舞台装置だった。
+
+### 7. 戦後日本囲碁の黄金期：スターとタイトル戦が作る「競技の物語」（1945年以降）
+
+近代囲碁が「見るスポーツ」として成熟する過程で、スター棋士の存在は欠かせない。呉清源と木谷実が切り開いた新布石は、盤の序盤観そのものを更新し、「常識」が変わる瞬間を棋界に刻んだ。どこから戦うべきか、角や辺をどう扱うか、厚みと地の交換をどう評価するか。新しい発想は賛否を生み、検証され、やがて定石や布石の常套句へ吸収されていく。この反復こそが、囲碁が生きた知として継続する仕組みである。
+
+タイトル戦の整備も、戦後の囲碁文化を決定づけた。1938年に世襲本因坊の本因坊秀哉が引退し名跡が組織に移ると、実力制の本因坊戦へ道が開かれ、1941年に第1期本因坊戦が開催された。以後、主要棋戦が拡充され、挑戦手合という形式は、強者同士の長期戦を「物語」として提示する舞台になった。新聞社の主催、スポンサー、賞金、リーグ戦やトーナメント——こうした仕組みは棋士の生活を支えると同時に、観戦者にとっての入口にもなる。
+
+普及面では、囲碁教室やアマチュア大会、テレビ番組による解説文化が大きな役割を果たした。解説は単に手順を説明するのではなく、「なぜその一手が必要か」を共有する営みであり、観戦者を共同研究者に変える。戦後の黄金期とは、強さの競争が制度とメディアに支えられ、学びの回路が社会に広がった時代だと言える。
+
+この時代には、棋士の個性が棋風として語られるようになり、ファンは「誰の碁が好きか」でコミュニティを作った。高川格の堅実さ、坂田栄男の勝負勘、藤沢秀行の豪胆さ、武宮正樹の宇宙流、小林光一の均衡感覚、加藤正夫の闘争心——名前がスタイルの代名詞になるほど、対局は技術の比較であると同時に、表現の比較でもあった。タイトル戦は、その個性を長期戦で照らし出し、棋士像を社会に定着させた。
+
+メディアの面では、1953年にNHK杯テレビ囲碁トーナメントが始まり、囲碁は「家庭の茶の間」で観戦される競技になった。限られた放送時間に収める早碁の形式は、読みの深さだけでなく判断の速さも価値に変え、解説者の言葉は視聴者の学びを支えた。放送の中でコミの調整が議論されるなど、公正さをめぐる感覚が広く共有されていったことも、囲碁が社会的な競技として根を張った証拠だろう。
+
+### 8. 東アジアから世界へ：国際化と勢力図の変動（20世紀後半〜）
+
+囲碁の中心が東アジアにあることは長く変わらなかったが、その内部の勢力図は大きく動いた。戦後日本が築いた制度と厚い棋士層は一つの黄金期を生んだ一方で、韓国と中国が国家的・社会的な育成の仕組みを整えると、国際戦の舞台で競争が激化する。趙治勲のように国境を越えて活躍する棋士は、囲碁が言語よりも棋譜によって共有される文化であることを体現した。
+
+1980年代後半以降、国際大会（世界戦）が相次いで創設されると、国内棋戦中心だった価値の序列が再編される。曹薫鉉、李昌鎬、聶衛平といった名手の名が国境を越えて語られ、勝敗は国や世代の物語へ接続されていった。ここで囲碁は、伝統芸道としての顔だけでなく、国際競技としての顔を強く持つようになる。プロ試験制度やリーグ運営、賞金規模、若手育成の仕組みの差は、盤上の棋風にも影響し、単なる「強い弱い」を超えて、制度が戦い方を形作ることが意識されるようになった。
+
+世界戦の代表例としては、富士通杯、応氏杯、三星火災杯、LG杯などが挙げられ、国際的な「頂点」の舞台が複数生まれた。世界戦は、棋士に「異なるルールや慣行の中で勝つ」能力も要求する。数え方の違い（面積で数えるか、地で数えるか）は終局の判断に影響し、持ち時間の違いは戦い方そのものを変える。囲碁の国際化とは、対局相手が増えることだけでなく、強さを測る物差しが複数化することでもあった。
+
+国際競争が常態化すると、強さは個人の才能だけでなく、組織の育成能力にも左右される。日本棋院の院生制度、韓国棋院の研究生制度、中国囲棋協会を中心としたリーグと育成の仕組みは、若年層の段階から対局量と研究量を確保し、国際舞台で戦える選手層を厚くする方向へ動いた。勝負の場が国内から世界へ広がるほど、棋士は一国の代表として期待を背負い、同時に世界標準の戦術を共有する。囲碁は、ローカルな伝統を保ちながら、グローバルな競技環境に適応するという二重の課題を抱えるようになった。
+
+### 9. コンピュータ囲碁とAI革命：研究テーマから日常ツールへ（20世紀末〜現代）
+
+囲碁は長く「コンピュータが苦手なゲーム」の代表例だった。評価が難しく、局面の枝分かれが極端に多いからである。初期のコンピュータ囲碁は定石データや局所的な形の判断を積み重ねたが、全局のバランスを取るのに苦戦した。転機になったのは、探索の考え方が変わったことだ。モンテカルロ木探索が実用化されると、厳密な読み切りではなく、試行の統計によって有望手を見つける道が開け、2000年代後半からプログラムの実力は急速に伸びた。
+
+そして2016年、AlphaGoが李世ドルと対戦し、囲碁界は「人間の直観」と見なしていた領域が、計算と学習によって更新され得ることを突きつけられる。衝撃は勝敗そのものだけにあったのではない。AIが示した手は、従来の定石観や形の価値判断を揺さぶり、棋士たちは「読み」と「評価」の両方を学び直すことになった。以後、KataGoやLeela Zeroのような解析AIが普及すると、研究会や自習、観戦の方法まで変わる。棋譜は人間同士の対局記録であると同時に、AIによる評価の対象となり、学びは一段と精密化した。
+
+AIがもたらした変化は、局所の定石を増やしただけではない。序盤での三々入りの評価が見直され、地と勢の交換比が再計算され、薄い形をあえて許容して別の大場を急ぐ、といった判断が新しい常識になった。人間同士の実戦も、AIの結論を模倣する段階から、AIの評価の「理由」を解釈して自分の戦い方へ組み込む段階へ移っている。解析は強さを底上げする一方で、誰もが同じ正解へ寄ってしまう危険もあり、棋士は「最善手」と「勝ちやすい手」の違いを意識するようになった。
+
+さらに、棋譜の位置づけも変わった。かつて棋譜は名人の遺産であり、弟子が並べて学ぶための教材だったが、いまは大量の対局データとして蓄積され、検索され、AIの学習資源にもなる。オープンソースのエンジンや解析ツールの普及は、研究の民主化を進め、アマチュアでも世界トップ級の評価に触れられる環境を作った。いっぽうで「答え」を先に知れるからこそ、なぜその手が良いのかを自分の言葉で説明し、再現できる形に落とし込む力がより重要になる。AIは囲碁を終わらせたのではなく、学びの作法を一段と厳密にし、創造性の問いを新しい形で突きつけたのである。
+
+### 10. 現代の囲碁：文化資産・マインドスポーツ・コミュニティの交差点
+
+AI時代の囲碁は、合理性の極限と美意識の再発見を同時に経験している。最善手に近づく道具があるからこそ、なぜその一手が「気持ちよい」のか、なぜその形が「良い」のかが、改めて問われる。囲碁は勝負であると同時に、形のバランス、読みの深さ、手順の物語性を楽しむ芸道でもある。AIはその二面性を壊すのではなく、むしろ両者の距離を測り直す鏡になった。
+
+生活様式の変化も、囲碁の場を拡張した。オンライン対局は地理的な制約を薄め、配信や動画の解説は観戦の入口を広げる。コミュニティは道場や碁会所だけでなく、SNSや学習アプリにも形成され、学びの経路は多様化した。女性棋戦の充実やジュニア育成の体系化は、囲碁が次世代の入口を作り直す試みでもある。
+
+同時に、囲碁の「文化資産」としての側面も見直されている。古い棋譜を並べることは、単なる懐古ではなく、現代の評価軸で再検討する研究でもある。江戸期の手合の知恵、昭和の勝負術、AI時代の最善——それらが同じ盤上に重ねられることで、囲碁は時代ごとの合理性と美意識を比較できる稀有な分野になった。教育、国際交流、生涯学習の題材として囲碁が用いられるのも、この多層性ゆえである。
+
+もっとも、道具が高度化するほど、学びの格差も生まれやすい。解析AIの使い方を知っている人と知らない人、ネット対局に慣れている人と盤に向き合う時間を重視する人——入口が増える一方で、迷いやすくもなる。だからこそ現代の普及には、結論を押し付けるのではなく、判断の理由を言葉にして共有する「解説」やコミュニティ運営が欠かせない。囲碁は孤独な読みの競技であると同時に、学びを介して人と人を結ぶ文化でもあり、その両方を支える設計が今後いっそう重要になる。
+
+今後の論点は、強さの追求だけではない。国際的なルール運用（コミ、持ち時間、終局処理）をどう揃えるか、競技としての魅力をどう伝えるか、そしてAIが当たり前の環境で「自分の碁」をどう作るか。囲碁は、最小限の道具から最大限の世界を立ち上げる遊びとして、これからも文化と競技の境界を行き来しながら更新され続けるだろう。
